added style files and svg

--- a/sass/brand-colors.scss
+++ b/sass/brand-colors.scss
@@ -1,8 +1,9 @@
-/* MIA BRAND COLORS */
+/*   MIA BRAND COLORS   */
 
-$primary: rgb(58, 55, 55);
+$primary: rgb(35, 35, 35);
 $support: rgb(239, 53, 53);
 $membership: rgb(219, 205, 185);
 $explore: rgb(140,210,205);
 $experience: rgb(128,86,150);
 $education: rgb(155,206,124);
+$whitish: #ededed;
