--- a/sass/main.scss
+++ b/sass/main.scss
@@ -87,7 +87,7 @@ header{
 
 #aggs dl{
     display:inline-block;
-    padding:0 10px 0 0;
+    padding:0 23px 0 0;
 }
 
 #aggs dt{
@@ -215,6 +215,7 @@ header{
 
 .mdl-textfield{
     width:100%;
+    min-width:350px;
 }
 
 .mdl-textfield__input {
@@ -223,6 +224,11 @@ header{
     border-width:0 0 3px 0;
     padding:0;
     text-align:center;
+}
+
+.mdl-badge[data-badge]:after {
+    top:0;
+    right:-30px;
 }
 
 ::-webkit-input-placeholder {
