Don't limit focused images to 100px height

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -126,11 +126,11 @@ header{
     .artwork-result h1{margin:0;padding:0;}
     .artwork-result h2{margin:0;padding:0;line-height:1em;}
     
-    .artwork-image{
+    .objects-wrap .artwork-image{
         height:100px;
     }
     
-    .artwork-image > div > img{
+    .objects-wrap .artwork-image > div > img{
         max-height:100px;
     }
     
