--- a/sass/main.scss
+++ b/sass/main.scss
@@ -121,6 +121,7 @@ header{
         background-color:#fff;
         -webkit-box-shadow: 2px 2px 4px 0 rgba(0,0,0,.25);
         box-shadow: 2px 2px 4px 0 rgba(0,0,0,.25);
+        cursor: pointer;
     }
     
     .artwork-result h1{margin:0;padding:0;}
