--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,9 +2,18 @@
 @import "brand-colors.scss";
 @import "mia-font.scss";
 
+$MiaGroteskBold: 'MiaGrotesk-Bold', sans-serif;
+$MiaGroteskBoldItalic: 'MiaGrotesk-BoldItalic', sans-serif;
+$MiaGroteskItalic: 'MiaGrotesk-Italic', sans-serif;
+$MiaGroteskLight: 'MiaGrotesk-Light', sans-serif;
+$MiaGroteskLightItalic: 'MiaGrotesk-LightItalic', sans-serif;
+$MiaGroteskRegular: 'MiaGrotesk-Regular', sans-serif;
+$MiaGroteskBlack: 'MiaGrotesk-Black', sans-serif;
+$MiaGroteskRlackItalic: 'MiaGrotesk-BlackItalic', sans-serif;
+
 
 body{
-    font-family: 'MiaGrotesk-Regular', sans-serif;
+    font-family: $MiaGroteskRegular;
     font-weight: 400;
     color:$primary;
     margin: 0;
@@ -19,12 +28,24 @@ body{
       z-index: -1;
     }
     
+a {
+  color: rgba(239, 53, 53, .75);
+  font-weight: 500;
+  text-decoration: none;
+  font-size:1em;
+}
+
+a:hover {
+  color: rgba(35, 35, 35, .65);
+  font-weight: 500;
+}
+    
 #search {
       /*margin: 8px;*/
     }
 
 h1,h2,h3,h4,h5,h6 {
-    font-family: 'MiaGrotesk-Bold', sans-serif;
+    font-family: $MiaGroteskBold;
 }
 
 .highlight em, h1 em, h2 em {
@@ -33,7 +54,7 @@ h1,h2,h3,h4,h5,h6 {
 
 .main-app-bar{
     color:#fff;
-    background-color:#3a3737;
+    background-color:$primary;
 }
 
 header{
@@ -75,10 +96,18 @@ header{
     color:$whitish;
     background-color:$primary;
     text-align:center;
+    cursor: pointer;
 }
 
 #aggs{
     padding:1em;
+    height:auto;
+    overflow: hidden;
+    -webkit-transition: height 0.3s ease-in;
+    -moz-transition: height 0.3s ease-in;
+    -o-transition: height 0.3s ease-in;
+    -ms-transition: height 0.3s ease-in;
+    transition: height 0.3s ease-in;
 }
 
 .agg-wrap h2{
@@ -158,7 +187,12 @@ header{
         display: none;
     }
     
-
+.objects-focus-sticky{
+    position: fixed;
+    top: 0;
+    left: 33%;
+    width:66%;
+}
     
 .objects-focus{
     float:left;
@@ -170,20 +204,20 @@ header{
     .objects-focus h2{
         font-size:2.5em;
         margin-bottom:10px;
-        font-family: 'MiaGrotesk-LightItalic', sans-serif;
+        font-family: $MiaGroteskLightItalic;
         font-style: italic;
     }
     
 
     .objects-focus .date{
         font-size:0.65em;
-        font-family: 'MiaGrotesk-Regular', sans-serif;
+        font-family: $MiaGroteskRegular;
         font-style: normal;
     }
     
     .objects-focus h5{
         text-transform:uppercase;
-        font-family: 'MiaGrotesk-Bold', sans-serif;
+        font-family: $MiaGroteskBold;
         margin-bottom:20px;
     }
     
@@ -195,12 +229,9 @@ header{
 
 
 .search-wrap div:first-child {
-    background-color: rgba(255,255,255,.75);
-    padding:2em;
     width:33%;
     margin:0 auto;
-    color:$primary;
-    
+    color:$primary; 
 }
 
 .search-wrap div h2{
@@ -209,31 +240,41 @@ header{
     padding:0.65em;
     margin-bottom:15px;
     font-size:2em;
-    font-family: 'MiaGrotesk-Regular', sans-serif;
+    font-family: $MiaGroteskRegular;
 }
 
 .search-wrap div input{
     width:100%;
     color:$primary;
-    font-family: 'MiaGrotesk-Light', sans-serif;
+    font-family: $MiaGroteskLight;
 }
 
 .mdl-textfield{
     width:100%;
     min-width:350px;
+    padding-left:1em;
+    padding-right:1em;
+    background-color: white;
+    border-radius:3px; 
+    -webkit-box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);  
 }
 
 .mdl-textfield__input {
     color:$primary;
     border-color:$primary;
     border-width:0 0 3px 0;
-    padding:0;
+    padding:0.5em;
     text-align:center;
 }
 
 .mdl-badge[data-badge]:after {
     top:0;
     right:-30px;
+    background-color: white;
+    color:$primary;
+    border:1px solid $primary;
+    border-radius: 0;
 }
 
 ::-webkit-input-placeholder {
