lazy load image quilt images

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -512,3 +512,8 @@ a.departmentLink:hover  {
   font-size: .9em;
   padding-bottom: 1em;
 }
+
+.quilt-wrap .lazy-load {
+  display: inline-block;
+}
+
