--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,15 +19,6 @@ body{
     margin: 0;
 }
 
-#map {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-    }
-
 a {
   color: rgba(239, 53, 53, .9);
   font-weight: 500;
@@ -237,6 +228,9 @@ header{
         font-style: italic;
     }
 
+.objects-focus h2 a {
+  color: $primary;
+}
 
     .objects-focus .date{
         font-size:0.65em;
@@ -525,4 +519,34 @@ a.departmentLink:hover  {
 
 .quilt-wrap .lazy-load {
   display: inline-block;
+}
+
+.artwork #map {
+  position: relative;
+  left: 0;
+  width: 65%;
+  height: calc(100% - 130px);
+  z-index: 1000;
+}
+.artwork .sticky #map {
+  width: 100%;
+  height: 100%;
+}
+
+.artwork .info {
+  position: absolute;
+  width: 35%;
+  background: #eee;
+  min-height: calc(100% - 130px);
+  padding: 1em;
+  right: 0;
+}
+.artwork .objects-focus {
+  border-top: none;
+  float: none;
+  padding-top: 0;
+}
+
+.artwork .objects-focus .artwork-image {
+  display: none;
 }
