--- a/sass/main.scss
+++ b/sass/main.scss
@@ -470,6 +470,10 @@ a.departmentLink:hover  {
   font-family: $MiaGroteskRegular;
   line-height: 1em;
   padding: 7px 0;
+  margin-top: 1em;
+}
+.departmentResources h3:first-child {
+  margin-top: 0;
 }
 .departmentPage h2 a{
   color: rgb(35,35,35);
