fixed gallery location, add hand cursor

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -262,14 +262,13 @@ header{
 
     .preview-subhead h5{
         font-family: $MiaGroteskBold;
-        margin-bottom:20px;
         color:$support;
+        cursor:hand;
     }
     
      .preview-subhead h6{
          color:$support;
-         float:right;
-         display:inline-block;
+         cursor:hand;
      }
 
 
