more peeks on artwork preview
peek date, medium, and creditline.
style the (^ v) peek icons, hide them sometimes
configurable wrapper tag for inline `<span>` peeks

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -534,3 +534,16 @@ a.departmentLink:hover  {
 .artwork .objects-focus .artwork-image {
   display: none;
 }
+
+.objects-focus div > p {
+  margin-bottom: 1em;
+}
+
+.objects-focus span {
+  font-style: normal;
+}
+
+.objects-focus i.material-icons {
+  font-size: 0.8em;
+  margin: 0 0.5em 0 0.1em;
+}
