turn on details icon link

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -591,6 +591,7 @@ h5.details-title {
     right:10px;
     line-height:1em; 
     font-family: $MiaGroteskBold;  
+    color: #222;
 }
 
 .objects-page-icon{
