--- a/sass/main.scss
+++ b/sass/main.scss
@@ -500,8 +500,8 @@ a.departmentLink:hover  {
 
 .quilt-wrap .lazy-load {
   display: inline-block;
+  overflow: hidden;
 }
-
 
 /* ===== artwork.js STYLES ===== */
 
@@ -537,7 +537,6 @@ a.departmentLink:hover  {
   border-top: none;
   float: none;
   padding-top: 0;
-  background-color:#fff;
 }
 .artwork .objects-focus .artwork-image {
   display: none;
