don't let title run into '(i) details' link

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -227,6 +227,7 @@ header{
         font-size:2.5em;
         font-family: $MiaGroteskLightItalic;
         font-style: italic;
+        margin-right: 1.5em;
     }
 
     .objects-focus h2 a {
