refactor search results
- to share same layout (1/3 2/3 for left and right columns)
- simplify A,B,C,D to List and Grid with toggle-able 'focus'

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -352,7 +352,7 @@ header{
   color: #ffffff;
   font-size: 2em;
 }
-.views .B:hover, .views .D:hover {
+.views .List:hover, .views .Grid:hover {
   opacity: .7;
 }
 /* ===== SEARCH RESULTS STYLES ===== */
