fix image loading on object page
- don't load image or zoomer if image is invalid
- cheekier 'please wait while we load the full sized image' message

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -572,6 +572,7 @@ a.departmentLink:hover  {
   padding: 1em;
   right: 0;
   overflow-y:scroll;
+  min-height: 100vh;
 }
 .artwork .objects-focus {
   border-top: none;
